--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@tanstack/react-query": "^5.85.5",
     "appwrite": "^18.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
